--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <audio src="waves.wav" id="waves">
 
   </audio>
+<div class="demo-dot">
     <?xml version="1.0" encoding="utf-8"?>
     <!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -20,7 +21,7 @@
     <line class="st0" x1="743" y1="222" x2="813.7" y2="151.3"/>
     <circle class="st1" cx="960.5" cy="509.5" r="42.5"/>
     </svg>
-    <div class="dot"></div>
+</div>
   <script src="script.js" charset="utf-8"></script>
   </body>
 </html>
