--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title></title>
   </head>
   <body>
-  <audio src="waves.wav" id="waves">
+  <audio src="waves.wav" id="waves" loop>
 
   </audio>
 <div class="demo-dot">
